cealdemo/tests/neg3/189.gold
Error: (line 1:1 'B') (line 2:6 '[') Labels cannot be used in front of array size variables
