cealdemo/tests/neg3/189.sct
B:
. A: [a]  0
. A


